Remove box shadow and footer when printing

--- a/assets/scss/devresume.scss
+++ b/assets/scss/devresume.scss
@@ -204,9 +204,13 @@ a.resume-link {
     }
 }
 
+@media print {
+	.footer {
+		display: none;
+	}
 
-
-
-
-
-
+	.resume-wrapper {
+		box-shadow: none !important;
+		border: none;
+	}
+}
